[package]
name = "unic"
version = "0.2.0"
authors = ["The UNIC Project Developers"]
homepage = "https://github.com/behnam/rust-unic/"
repository = "https://github.com/behnam/rust-unic/"
license = "MIT/Apache-2.0"
keywords = ["text", "unicode"]
description = "UNIC - Unicode and Internationalization Crates"
categories = ["parsing", "rendering", "encoding", "development-tools"]
readme = "README.md"

[badges]
travis-ci = { repository = "behnam/rust-unic", branch = "master" }

[workspace]

[dependencies]
unic-ucd = { path = "components/ucd/", version = "0.2.0" }
unic-bidi = { path = "components/bidi/", version = "0.2.0" }
unic-idna = { path = "components/idna/", version = "0.2.0" }
unic-normal = { path = "components/normal/", version = "0.2.0" }

[features]
default = []
bench_it = []
with_serde = []
