[package]
name = "unic-data"
version = "0.0.0"
authors = ["The UNIC Project Developers"]
repository = "https://github.com/behnam/rust-unic/"
license = "MIT/Apache-2.0"
description = "UNIC - Source Data Download Script"
publish = false

[badges]
travis-ci = { repository = "behnam/rust-unic", branch = "master" }

[dependencies]

# Command line argument parsing
clap = "2.25"

# Download Unicode files from the web
futures = "0.1"
hyper = "0.11"
tokio-core = "0.1"

# Config parsing
serde = "1.0"
serde_derive = "1.0"
toml = "0.4"
