[package]
name = "unic"
version = "0.5.0"
authors = ["The UNIC Project Developers"]
repository = "https://github.com/behnam/rust-unic/"
license = "MIT/Apache-2.0"
keywords = ["text", "unicode", "internationalization"]
description = "UNIC - Unicode and Internationalization Crates"
categories = ["text-processing", "parsing", "rendering"]
readme = "README.md"

# No tests/benches that depends on /data/
exclude = []

[features]
default = []
unstable = []  # Rust nightly features
bench_it = ["unic-bidi/bench_it"]
serde = ["unic-bidi/serde"]

[dependencies]
unic-bidi = { path = "bidi/", version = "0.5.0" }
unic-char = { path = "char/", version = "0.5.0" }
unic-idna = { path = "idna/", version = "0.5.0" }
unic-normal = { path = "normal/", version = "0.5.0" }
unic-ucd = { path = "ucd/", version = "0.5.0" }
unic-utils = { path = "utils/", version = "0.5.0" }

[badges]
appveyor = { repository = "behnam/rust-unic", branch = "master", service = "github" }
travis-ci = { repository = "behnam/rust-unic", branch = "master" }
