[package]
name = "unic-cli"
version = "0.9.0"
edition = "2018"
authors = ["The UNIC Project Developers"]
repository = "https://github.com/open-i18n/rust-unic/"
license = "MIT/Apache-2.0"
description = "UNIC Command-Line Tools"
keywords = ["text", "unicode", "internationalization"]
categories = ["internationalization", "text-processing", "parsing", "command-line-utilities"]
readme = "README.md"

[dependencies]
unic = { path = "../../unic/", version = "0.9.0" }

clap = "2.29"
lazy_static = "1.0"
prettytable-rs = "0.6.7"
regex = "0.2"

[dev-dependencies]
assert_cli = "0.5"
quickcheck = "0.6"

[badges]
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "open-i18n/rust-unic" }
is-it-maintained-open-issues = { repository = "open-i18n/rust-unic" }
