[package]
name = "unic-bidi"
version = "0.1.0"
authors = ["The UNIC Project Developers"]
homepage = "https://github.com/behnam/rust-unic/"
repository = "https://github.com/behnam/rust-unic/"
license = "MIT/Apache-2.0"
keywords = ["text", "unicode", "rtl", "text", "layout", "bidi"]
description = "UNIC - Unicode Bidirectional Algorithm"

[features]
default = []
bench_it = []
with_serde = ["serde", "serde_derive"]

[dependencies]
matches = "0.1"
serde = {version = ">=0.8, <2.0", optional = true}
serde_derive = {version = ">=0.8, <2.0", optional = true}
unic-ucd-bidi = { path = "../ucd/bidi/", version = "0.1" }

[dev-dependencies]
serde_test = ">=0.8, <2.0"
