[package]
name = "unic-bidi"
version = "0.4.0"
authors = ["The UNIC Project Developers"]
homepage = "https://github.com/behnam/rust-unic/"
repository = "https://github.com/behnam/rust-unic/"
license = "MIT/Apache-2.0"
keywords = ["text", "unicode", "rtl", "layout", "bidi"]
description = "UNIC - Unicode Bidirectional Algorithm"
readme = "README.md"

[badges]
travis-ci = { repository = "behnam/rust-unic", branch = "master" }

[features]
default = []
bench_it = []

[dependencies]
matches = "0.1"
serde = { version = ">=0.8, <2.0", optional = true, features = ["derive"] }
unic-ucd-bidi = { path = "../ucd/bidi/", version = "0.4.0" }
unic-ucd-core = { path = "../ucd/core/", version = "0.4.0" }

[dev-dependencies]
serde_test = ">=0.8, <2.0"
