[package]
name = "unic-idna"
version = "0.4.0"
authors = ["The UNIC Project Developers"]
homepage = "https://github.com/behnam/rust-unic/"
repository = "https://github.com/behnam/rust-unic/"
license = "MIT/Apache-2.0"
keywords = ["text", "unicode"]
description = "UNIC - Unicode IDNA Compatibility Processing"
readme = "README.md"

[badges]
travis-ci = { repository = "behnam/rust-unic", branch = "master" }

[[test]]
name = "tests"
harness = false

[dev-dependencies]
rustc-test = "0.1"
rustc-serialize = "0.3"

[dependencies]
matches = "0.1"
unic-idna-punycode = { path = "punycode/", version = "0.4.0" }
unic-idna-mapping = { path = "mapping/", version = "0.4.0" }
unic-normal = { path = "../normal/", version = "0.4.0" }
unic-ucd-bidi = { path = "../ucd/bidi/", version = "0.4.0" }
unic-ucd-core = { path = "../ucd/core/", version = "0.4.0" }
unic-ucd-normal = { path = "../ucd/normal/", version = "0.4.0" }
