[package]
name = "unic-bidi"
version = "0.5.0"
authors = ["The UNIC Project Developers"]
repository = "https://github.com/behnam/rust-unic/"
license = "MIT/Apache-2.0"
keywords = ["text", "unicode", "bidi", "rtl", "layout"]
description = "UNIC - Unicode Bidirectional Algorithm"
categories = ["text-processing", "parsing", "rendering"]
readme = "README.md"

# No tests/benches that depends on /data/
exclude = [
    "tests/conformance_tests.rs",
    "benches/bidi_udhr_benches.rs",
]

[badges]
travis-ci = { repository = "behnam/rust-unic", branch = "master" }

[features]
default = []
bench_it = []

[dependencies]
matches = "0.1"
serde = { version = ">=0.8, <2.0", optional = true, features = ["derive"] }
unic-ucd-bidi = { path = "../ucd/bidi/", version = "0.5.0" }

[dev-dependencies]
serde_test = ">=0.8, <2.0"
unic-char-property = { path = "../char/property/", version = "0.5.0" }
unic-ucd-core = { path = "../ucd/core/", version = "0.5.0" }
