[package]
name = "unic-bidi"
version = "0.9.0"
edition = "2018"
authors = ["The UNIC Project Developers"]
repository = "https://github.com/open-i18n/rust-unic/"
license = "MIT/Apache-2.0"
description = "UNIC — Unicode Bidirectional Algorithm"
keywords = ["text", "unicode", "bidi", "rtl", "layout"]
categories = ["internationalization", "text-processing", "parsing", "rendering"]
readme = "README.md"

# No tests/benches that depends on /data/
exclude = [
    "tests/conformance_tests.rs",
    "benches/bidi_udhr_benches.rs",
]

[features]
default = []
bench_it = []

[dependencies]
matches = "0.1"
serde = { version = ">=0.8, <2.0", optional = true, features = ["derive"] }
unic-ucd-bidi = { path = "../ucd/bidi/", version = "0.9.0" }

[dev-dependencies]
serde_test = ">=0.8, <2.0"
unic-char-property = { path = "../char/property/", version = "0.9.0" }
unic-ucd-version = { path = "../ucd/version/", version = "0.9.0" }

[badges]
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "open-i18n/rust-unic" }
is-it-maintained-open-issues = { repository = "open-i18n/rust-unic" }
appveyor = { repository = "open-i18n/rust-unic", branch = "master", service = "github" }
travis-ci = { repository = "open-i18n/rust-unic", branch = "master" }
