[package]
name = "unic-char"
version = "0.6.0"
authors = ["The UNIC Project Developers"]
repository = "https://github.com/behnam/rust-unic/"
license = "MIT/Apache-2.0"
description = "UNIC - Unicode Characters"
keywords = ["text", "unicode", "utilities"]
categories = ["internationalization", "text-processing", "parsing"]
readme = "README.md"

# No tests/benches that depends on /data/
exclude = []

[features]
default = []
std = ["unic-char-range/std"]

[badges]
travis-ci = { repository = "behnam/rust-unic", branch = "master" }

[dependencies]
unic-char-property = { path = "property/", version = "0.6.0" }
unic-char-range = { path = "range/", version = "0.6.0" }
