[package]
name = "unic-char"
version = "0.9.0"
edition = "2018"
authors = ["The UNIC Project Developers"]
repository = "https://github.com/open-i18n/rust-unic/"
license = "MIT/Apache-2.0"
description = "UNIC — Unicode Character Tools"
keywords = ["text", "unicode", "utilities"]
categories = ["internationalization", "text-processing", "parsing"]
readme = "README.md"

# No tests/benches that depends on /data/
exclude = []

[features]
default = []
std = ["unic-char-range/std"]

[dependencies]
unic-char-basics = { path = "basics/", version = "0.9.0" }
unic-char-property = { path = "property/", version = "0.9.0" }
unic-char-range = { path = "range/", version = "0.9.0" }

[badges]
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "open-i18n/rust-unic" }
is-it-maintained-open-issues = { repository = "open-i18n/rust-unic" }
