[package]
name = "unic-common"
version = "0.7.0"
authors = ["The UNIC Project Developers"]
repository = "https://github.com/behnam/rust-unic/"
license = "MIT/Apache-2.0"
description = "UNIC - Common Utilities"
keywords = ["unicode", "version"]
categories = ["internationalization", "text-processing"]

# No tests/benches that depends on /data/
exclude = []

[features]
default = []
unstable = []  # Rust nightly features

[badges]
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "behnam/rust-unic" }
is-it-maintained-open-issues = { repository = "behnam/rust-unic" }
appveyor = { repository = "behnam/rust-unic", branch = "master", service = "github" }
travis-ci = { repository = "behnam/rust-unic", branch = "master" }
