[package]
name = "unic-emoji"
version = "0.7.0"
authors = ["The UNIC Project Developers"]
repository = "https://github.com/behnam/rust-unic/"
license = "MIT/Apache-2.0"
description = "UNIC - Unicode Emoji"
keywords = ["text", "unicode", "character-property", "emoji"]
categories = ["internationalization", "text-processing", "parsing", "rendering"]

# No tests/benches that depends on /data/
exclude = []

[badges]
travis-ci = { repository = "behnam/rust-unic", branch = "master" }

[dependencies]
unic-emoji-char = { path = "char/", version = "0.7.0" }
