[package]
name = "unic-emoji"
version = "0.9.0"
edition = "2018"
authors = ["The UNIC Project Developers"]
repository = "https://github.com/open-i18n/rust-unic/"
license = "MIT/Apache-2.0"
description = "UNIC — Unicode Emoji"
keywords = ["text", "unicode", "character-property", "emoji"]
categories = ["internationalization", "text-processing", "parsing", "rendering"]

# No tests/benches that depends on /data/
exclude = []

[dependencies]
unic-emoji-char = { path = "char/", version = "0.9.0" }

[badges]
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "open-i18n/rust-unic" }
is-it-maintained-open-issues = { repository = "open-i18n/rust-unic" }
