[package]
name = "unic-idna"
version = "0.9.0"
edition = "2018"
authors = ["The UNIC Project Developers"]
repository = "https://github.com/open-i18n/rust-unic/"
license = "MIT/Apache-2.0"
description = "UNIC — Unicode IDNA Compatibility Processing"
keywords = ["text", "unicode", "idna", "internationalized", "domain-names"]
categories = ["internationalization", "text-processing", "parsing", "rendering"]
readme = "README.md"

# No tests/benches that depends on /data/
exclude = ["tests/conformance_tests.rs"]

[dependencies]
matches = "0.1"
unic-idna-punycode = { path = "punycode/", version = "0.9.0" }
unic-idna-mapping = { path = "mapping/", version = "0.9.0" }
unic-normal = { path = "../normal/", version = "0.9.0" }
unic-ucd-bidi = { path = "../ucd/bidi/", version = "0.9.0" }
unic-ucd-normal = { path = "../ucd/normal/", version = "0.9.0" }
unic-ucd-version = { path = "../ucd/version/", version = "0.9.0" }

[badges]
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "open-i18n/rust-unic" }
is-it-maintained-open-issues = { repository = "open-i18n/rust-unic" }
