[package]
name = "unic-normal"
version = "0.9.0"
edition = "2018"
authors = ["The UNIC Project Developers"]
repository = "https://github.com/open-i18n/rust-unic/"
license = "MIT/Apache-2.0"
description = "UNIC — Unicode Normalization Forms"
keywords = ["text", "unicode", "normalization", "decomposition", "recomposition"]
categories = ["internationalization", "text-processing", "parsing", "rendering"]
readme = "README.md"

# No tests/benches that depends on /data/
exclude = ["tests/conformance_tests.rs"]

[dependencies]
unic-ucd-normal = { path = "../ucd/normal/", version = "0.9.0" }

[dev-dependencies]
unic-ucd-version = { path = "../ucd/version/", version = "0.9.0" }

[badges]
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "open-i18n/rust-unic" }
is-it-maintained-open-issues = { repository = "open-i18n/rust-unic" }
appveyor = { repository = "open-i18n/rust-unic", branch = "master", service = "github" }
travis-ci = { repository = "open-i18n/rust-unic", branch = "master" }
