[package]
name = "unic-segment"
version = "0.9.0"
edition = "2018"
authors = ["The UNIC Project Developers"]
repository = "https://github.com/open-i18n/rust-unic/"
license = "MIT/Apache-2.0"
description = "UNIC — Unicode Text Segmentation Algorithms"
keywords = ["text", "unicode", "grapheme", "word", "boundary"]
categories = ["internationalization", "text-processing", "parsing", "rendering"]
readme = "README.md"

# No tests/benches that depends on /data/
exclude = []

[dependencies]
unic-ucd-segment = { path = "../ucd/segment/", version = "0.9.0" }

[dev-dependencies]
quickcheck = "0.6"
unic-ucd-common = { path = "../ucd/common/", version = "0.9.0" }

[badges]
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "open-i18n/rust-unic" }
is-it-maintained-open-issues = { repository = "open-i18n/rust-unic" }
appveyor = { repository = "open-i18n/rust-unic", branch = "master", service = "github" }
travis-ci = { repository = "open-i18n/rust-unic", branch = "master" }
