[package]
name = "unic-ucd"
version = "0.6.0"
authors = ["The UNIC Project Developers"]
repository = "https://github.com/behnam/rust-unic/"
license = "MIT/Apache-2.0"
description = "UNIC - Unicode Character Database"
keywords = ["text", "unicode", "character-property", "character-database"]
categories = ["internationalization", "text-processing", "parsing", "rendering"]
readme = "README.md"

# No tests/benches that depends on /data/
exclude = []

[badges]
travis-ci = { repository = "behnam/rust-unic", branch = "master" }

[dependencies]
unic-ucd-age = { path = "age/", version = "0.6.0" }
unic-ucd-bidi = { path = "bidi/", version = "0.6.0" }
unic-ucd-case = { path = "case/", version = "0.6.0" }
unic-ucd-category = { path = "category/", version = "0.6.0" }
unic-ucd-core = { path = "core/", version = "0.6.0" }
unic-ucd-name = { path = "name/", version = "0.6.0" }
unic-ucd-normal = { path = "normal/", version = "0.6.0", features = ["unic-ucd-category"] }

[dev-dependencies]
unic-utils = { path = "../utils/", version = "0.6.0" }
unic-char-range = { path = "../char/range/", version = "0.6.0" }
matches = "0.1"
