[package]
name = "unic-utils"
version = "0.5.0"
authors = ["The UNIC Project Developers"]
repository = "https://github.com/behnam/rust-unic/"
license = "MIT/Apache-2.0"
keywords = ["text", "unicode", "utilities"]
description = "UNIC - Utilities"
categories = ["text-processing", "parsing", "rendering"]

# No tests/benches that depends on /data/
exclude = []

[dependencies]
unic-char-range = { path = "../char/range/", version = "0.5.0" }

[badges]
travis-ci = { repository = "behnam/rust-unic", branch = "master" }
