[package]
name = "unic-utils"
version = "0.6.0"
authors = ["The UNIC Project Developers"]
repository = "https://github.com/behnam/rust-unic/"
license = "MIT/Apache-2.0"
description = "UNIC - Utilities"
keywords = ["text", "unicode", "utilities"]
categories = ["internationalization", "text-processing", "parsing", "rendering"]

# No tests/benches that depends on /data/
exclude = []

[dependencies]
unic-char-range = { path = "../char/range/", version = "0.6.0" }

[badges]
travis-ci = { repository = "behnam/rust-unic", branch = "master" }
