[package]
name = "unic-idna-mapping"
version = "0.4.0"
authors = ["The UNIC Project Developers"]
homepage = "https://github.com/behnam/rust-unic/"
repository = "https://github.com/behnam/rust-unic/"
license = "MIT/Apache-2.0"
keywords = ["text", "unicode"]
description = "UNIC - IDNA - IDNA Mapping Table"

[badges]
travis-ci = { repository = "behnam/rust-unic", branch = "master" }

[dev-dependencies]
rustc-test = "0.1"
rustc-serialize = "0.3"

[dependencies]
unic-ucd-core = { path = "../../ucd/core/", version = "0.4.0" }
