[package]
name = "unic-ucd-age"
version = "0.4.0"
authors = ["The UNIC Project Developers"]
homepage = "https://github.com/behnam/rust-unic/"
repository = "https://github.com/behnam/rust-unic/"
license = "MIT/Apache-2.0"
keywords = ["text", "unicode"]
description = "UNIC - Unicode Character Database - Age"

[badges]
travis-ci = { repository = "behnam/rust-unic", branch = "master" }

[dependencies]
unic-ucd-core = { path = "../core/", version = "0.4.0" }
unic-ucd-utils = { path = "../utils/", version = "0.4.0" }
