[package]
name = "unic-ucd-bidi"
version = "0.1.0"
authors = ["The UNIC Project Developers"]
homepage = "https://github.com/behnam/rust-unic/"
repository = "https://github.com/behnam/rust-unic/"
license = "MIT/Apache-2.0"
keywords = ["text", "unicode"]
description = "UNIC - Unicode Character Database - Bidi Properties"

[features]
default = []
unstable = []   # Used for benchmakrs

[dependencies]
unic-ucd-core = { path = "../core/", version = "0.1" }
