[package]
name = "unic-ucd-category"
version = "0.4.0"
authors = ["The UNIC Project Developers"]
homepage = "https://github.com/behnam/rust-unic/"
repository = "https://github.com/behnam/rust-unic/"
license = "MIT/Apache-2.0"
keywords = ["text", "unicode"]
description = "UNIC - Unicode Character Database - General Category"

[badges]
travis-ci = { repository = "behnam/rust-unic", branch = "master" }

[dependencies]
matches = "0.1.6"
unic-ucd-core = { path = "../core/", version = "0.4.0" }
unic-ucd-utils = { path = "../utils/", version = "0.4.0" }
