[package]
name = "unic-ucd-normal"
version = "0.1.1"
authors = ["The UNIC Project Developers"]
homepage = "https://github.com/behnam/rust-unic/"
repository = "https://github.com/behnam/rust-unic/"
license = "MIT/Apache-2.0"
keywords = ["text", "unicode"]
description = "UNIC - Unicode Character Database - Normalization Properties"

[dependencies]
unic-ucd-core = { path = "../core/", version = "0.1.1" }
