[package]
name = "unic-ucd-utils"
version = "0.1.1"
authors = ["The UNIC Project Developers"]
homepage = "https://github.com/behnam/rust-unic/"
repository = "https://github.com/behnam/rust-unic/"
license = "MIT/Apache-2.0"
keywords = ["text", "unicode"]
description = "UNIC - Utilities for working with Unicode Code Points"

[badges]
travis-ci = { repository = "behnam/rust-unic", branch = "master" }
